# csg_maker

./: Cargo.toml
src/: lib.rs  main.rs
src/graphics/: cam.rs  depth.rs  init.rs  mod.rs  msaa.rs  render.rs  rendering_object.rs  texture.rs  uniform.rs  vertex.rs  wgpu_object.rs
src/graphics/shaders/: main.wgsl
src/object/: hierarchy.rs  logical_object.rs  mod.rs  world_object.rs
src/utils/: consts.rs  mod.rs
