[package]
name = "csg_maker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
encase = "0.7.0"
env_logger = "0.11.3"
log = "0.4.21"
wgpu = { version = "0.19.4" }
winit = "0.29.15"
cfg-if = "1.0.0"
glam = "0.27.0"
bytemuck = { version = "1.15.0", features = ["derive"] }
cgmath = "0.18.0"
chrono = "0.4.38"
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.19.4", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

 